:sparkles: Add functionality to hamburger menu

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,17 +1,64 @@
 <header class="header" id="top">
-	<nav class="header__nav">
-		<a href="https://adalab.es" target="_blank" class="header__link">
-			<img class="header__img" src="./assets/images/ico-menu.svg" title="Abrir menú" alt="Icono menú" />
-		</a>
-	</nav>
-	<h1 class="header__title">
-		<span class="header__title--span">Anonymous</span>
-		<span class="header__title--span">proxy</span>
-	</h1>
-	<h2 class="header__subtitle">In hac habitasse platea dictumst.</h2>
-	<a href="#purchase" class="link">
-		<div class="nav__icon">
-			<img src="./assets/images/ico-scroll-down.svg" alt="Icon header" title="Ir a sección compra" class="nav__icon--down" />
-		</div>
-	</a>
+  <nav class="header__nav">
+    <div class="hamburger__icon js-hamburger-icon">
+      <span class="hamburger__icon-bar js-hamburger-bar"></span>
+      <span class="hamburger__icon-bar js-hamburger-bar"></span>
+      <span class="hamburger__icon-bar js-hamburger-bar"></span>
+    </div>
+    <div class="header__hamburger js-hamburger-menu hidden">
+      <ul class="header__hamburger--list">
+        <li class="header__hamburger--list-item">
+          <a
+            title="Go to Adriana Del Teso's portfolio"
+            class="header__hamburger--list-link"
+            target="_blank"
+            href="https://2y2son4.github.io/flex-portfolio/"
+            >Portfolio</a
+          >
+        </li>
+        <li class="header__hamburger--list-item">
+          <a
+            title="Go to Adriana Del Teso's GitHub page"
+            class="header__hamburger--list-link"
+            target="_blank"
+            href="https://github.com/2y2son4"
+            >GitHub</a
+          >
+        </li>
+        <li class="header__hamburger--list-item">
+          <a
+            title="Go to Adriana Del Teso's Linkedin profile"
+            class="header__hamburger--list-link"
+            target="_blank"
+            href="https://www.linkedin.com/in/2y2son4/"
+            >Linkedin</a
+          >
+        </li>
+        <li class="header__hamburger--list-item">
+          <a
+            title="Go to Adriana Del Teso's twitter page"
+            class="header__hamburger--list-link"
+            target="_blank"
+            href="https://twitter.com/2y2son4"
+            >Twitter</a
+          >
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <h1 class="header__title">
+    <span class="header__title--span">Simple</span>
+    <span class="header__title--span">landing page</span>
+  </h1>
+  <h2 class="header__subtitle">Created with HTML + CSS + gulp + JavaScript</h2>
+  <a href="#purchase" class="link">
+    <div class="nav__icon">
+      <img
+        src="./assets/images/ico-scroll-down.svg"
+        alt="Icon header"
+        title="Ir a sección compra"
+        class="nav__icon--down"
+      />
+    </div>
+  </a>
 </header>
