:art: Improve structure and format of code

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -51,7 +51,7 @@
     <span class="header__title--span">landing page</span>
   </h1>
   <h2 class="header__subtitle">Created with HTML + CSS + gulp + JavaScript</h2>
-  <a href="#purchase" class="link">
+  <a href="#second-section" class="link">
     <div class="nav__icon">
       <img
         src="./assets/images/ico-scroll-down.svg"
