--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,15 +1,17 @@
 .main {
   &__container {
-    &--insomnia {
+    &--text {
       margin: 0 14px;
       @include mediaTablet {
         margin: 0 40px;
       }
+
       @include mediaDesktop {
         margin: 0 auto;
         max-width: 1024px;
       }
     }
+
     &--grid {
       margin: 0 16px;
       display: grid;
@@ -23,6 +25,7 @@
         grid-template-rows: 76px 1fr 166px;
         grid-template-areas: 'title title title' 'reason1 reason2 reason3' 'button button button';
       }
+
       @include mediaDesktop {
         margin: 0 auto;
         grid-template-rows: 150px 1fr 166px;
@@ -30,8 +33,10 @@
       }
     }
   }
+
   &__button {
     background-color: $color-bg;
+
     &--tips {
       width: 76px;
       height: 46px;
@@ -39,27 +44,31 @@
         @include sizeLine(20px, 46px);
         color: $deco-brand;
       }
+
       background-color: $color-bg;
       border: 2px $deco-brand solid;
       border-radius: 24px;
       margin: 32px 0 44px;
       transform: scale(1);
       transition: transform $trans-bt, color $trans-bt, border $trans-bt;
+      @include mediaTablet {
+        width: 90px;
+        margin-bottom: 60px;
+      }
+
+      @include mediaDesktop {
+        width: 160px;
+      }
+
       &:hover {
         transform: scale(1.2);
         color: $color-bg;
         background-color: $dark-brand;
         border: 2px $dark-brand solid;
       }
-      @include mediaTablet {
-        width: 90px;
-        margin-bottom: 60px;
-      }
-      @include mediaDesktop {
-        width: 160px;
-      }
     }
-    &--purchase {
+
+    &--section {
       width: 184px;
       height: 44px;
       background-color: $deco-brand;
@@ -67,38 +76,46 @@
       transform: scale(1);
       transition: transform $trans-bt, background-color $trans-bt;
       border: 2px $deco-brand solid;
+      margin: 44px auto 60px;
+
       &:hover {
         transform: scale(1.2);
         background-color: $color-bg;
         color: $dark-brand;
         border: 2px $dark-brand solid;
       }
-      margin: 44px auto 60px;
+
       @include robotoMedium {
         @include sizeLine(20px, 44px);
         color: $color-bg;
       }
+
       @include mediaTablet {
         width: 210px;
         grid-area: button;
         margin-top: 60px;
       }
+
       @include mediaDesktop {
         width: 256px;
       }
     }
   }
+
   &__title {
     @include robotoBold {
       @include sizeLine(24px, 30px);
       @include mediaTablet {
         @include sizeLine(26px, 44px);
       }
+
       @include mediaDesktop {
         font-size: 32px;
       }
     }
+
     &--small {
+      margin-top: 30px;
       @include robotoRegular {
         @include sizeLine(14px, 30px);
         color: $light-brand;
@@ -107,28 +124,32 @@
           font-size: 16px;
         }
       }
-      margin-top: 30px;
+
       @include mediaDesktop {
         margin-top: 60px;
         font-size: 16px;
       }
     }
+
     &--center {
+      margin-top: 30px;
       @include robotoBold {
         @include sizeLine(24px, 30px);
         text-align: center;
       }
-      margin-top: 30px;
+
       @include mediaTablet {
         @include sizeLine(26px, 44px);
         grid-area: title;
       }
+
       @include mediaDesktop {
         font-size: 32px;
         margin-top: 60px;
       }
     }
   }
+
   &__paragraph {
     @include robotoRegular {
       @include sizeLine(18px, 30px);
@@ -140,6 +161,7 @@
       }
     }
   }
+
   &__article {
     &--title {
       margin-top: 44px;
@@ -147,12 +169,14 @@
         @include sizeLine(18px, 30px);
         text-align: center;
       }
+
       @include mediaTablet {
         font-size: 24px;
         margin-left: 0;
         margin-right: 0;
         margin-bottom: 14px;
       }
+
       @include mediaDesktop {
         margin-top: 0;
       }
@@ -160,10 +184,12 @@
     &--paragraph {
       color: $color-text;
       margin: 0 70px;
+
       @include robotoRegular {
         @include sizeLine(18px, 30px);
         text-align: center;
       }
+
       @include mediaTablet {
         font-size: 20px;
         margin: 0 20px;
@@ -175,7 +201,8 @@
   &-tips {
     background-color: $color-bg;
   }
-  &-purchase {
+
+  &-second {
     background-color: $color-bg-2;
   }
 }
