--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,6 +1,6 @@
 <main class="main">
   <section class="section-tips">
-    <div class="main__container--insomnia">
+    <div class="main__container--text">
       <h4 class="main__title--small">Insomnia tips</h4>
       <h2 class="main__title">Looking through a window</h2>
       <p class="main__paragraph">
@@ -10,9 +10,9 @@
       <button class="main__button--tips">Go</button>
     </div>
   </section>
-  <section class="section-purchase">
+  <section class="section-second">
     <div class="main__container--grid">
-      <h2 id="purchase" class="main__title--center">3 Reasons To Purchase</h2>
+      <h2 id="second-section" class="main__title--center">3 Reasons To Purchase</h2>
       <include
         src="./articles.html"
         position="-1"
@@ -34,7 +34,7 @@
         pArticle="Aliquam in dolor et dolor tincidunt."
       >
       </include>
-      <button class="main__button--purchase">More reasons</button>
+      <button class="main__button--section">More reasons</button>
     </div>
   </section>
 </main>
