--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -8,16 +8,18 @@
     @include flexCenter;
     position: absolute;
     left: 50%;
-    transform: translate(-50%, -50%); //translate (x, y) x=0, y=0 es de donde se parte.
+    transform: translate(-50%, -50%);
   }
 
   &--img {
     width: 28px;
   }
 }
+
 .up:hover {
   animation: up 1.6s 2;
 }
+
 @keyframes up {
   0% {
     transform: rotate(0);
@@ -32,7 +34,14 @@
     transform: translateY(-20px);
   }
 }
+
 .footer {
+  background-color: $dark-brand;
+  color: $color-bg;
+  @include robotoRegular {
+    @include sizeLine(16px, 30px);
+  }
+
   &__container {
     margin: 0 14px;
     @include flexCenter;
@@ -45,6 +54,7 @@
       max-width: 600px;
     }
   }
+
   &__copyright {
     margin-top: 30px;
     margin-bottom: 44px;
@@ -55,18 +65,16 @@
       margin-top: 44px;
       order: -1;
     }
+
     &--small {
       @include sizeLine(14px, 30px);
     }
+
     &--icon {
       color: $deco-brand;
     }
   }
-  background-color: $dark-brand;
-  color: $color-bg;
-  @include robotoRegular {
-    @include sizeLine(16px, 30px);
-  }
+
   &__list {
     text-transform: uppercase;
     @include flexCenter;
@@ -79,6 +87,7 @@
         align-items: flex-start;
       }
     }
+
     &--media {
       margin-top: 30px;
       @include mediaTablet {
@@ -86,6 +95,7 @@
         align-items: flex-start;
       }
     }
+
     &--link {
       padding: 6px 20px;
       color: inherit;
