--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -51,12 +51,11 @@
   }
 
   &__subtitle {
+    color: $color-bg;
+    margin-bottom: 45px;
     @include robotoRegular {
       font-size: 16px;
     }
-
-    color: $color-bg;
-    margin-bottom: 45px;
 
     @include mediaTablet {
       font-size: 24px;
@@ -105,12 +104,15 @@
   @include mediaTablet {
     margin-bottom: 44px;
   }
+
   @include mediaDesktop {
     margin-bottom: 12px;
   }
+
   &--down {
     width: 30px;
     animation: down 1.6s 1;
+
     &:hover {
       animation: downHover 1.6s 1;
     }
@@ -141,7 +143,7 @@
   }
 }
 
-.x {
+.close-icon {
   &:nth-of-type(1) {
     transition: all 100ms ease-in-out;
     transform: rotate(45deg);
